<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">notebook2</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login_title">UU记事本</string>
    <string name="userName">账号</string>
    <string name="userPass">密码</string>
    <string name="forgetPass">忘记密码？</string>
    <string name="login">登陆</string>
    <string name="register">注册账号</string>
    <string name="phone">手机</string>
    <string name="email">邮箱</string>
    <string name="checkPass">确认密码</string>
<string-array name="note_type">
    <item>生活</item>
    <item>工作</item>
    <item>其他</item>
</string-array>
<string-array name="listPreference">
   <item>自动</item>
    <item>手动</item>
</string-array>
<string-array name="listValues">
    <item>0</item>
    <item>1</item>
</string-array>
</resources>
