<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:gravity="center_horizontal">
      <TextView
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title" 
        android:textColor="#e3f"
        android:textSize="30sp"
        />

        <EditText 
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/userName"
        android:id="@+id/name"
        android:maxLength="16"
        android:inputType="textPersonName"
        />
    <EditText 
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/userPass"
        android:id="@+id/pass"
        android:inputType="textPassword"
        android:maxLength="16"/>
    <EditText 
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/checkPass"
        android:id="@+id/checkPass"
        android:inputType="textPassword"
        android:maxLength="16"
        />
    <EditText 
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:id="@+id/phone"
        android:hint="@string/phone"
        
        />
    <EditText 
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:id="@+id/email"
        android:hint="@string/email"
        
        />
    <Button 
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:onClick="register"
        android:text="@string/register"
        android:background="#7a0"
        android:layout_marginBottom="20dp"
        />
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ErrorMsg"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>
