<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
     >
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">
    <TextView
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title" 
        android:textColor="#e3f"
        android:textSize="30sp"
        />
    <EditText 
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/userName"
        android:id="@+id/name"
        android:maxLength="16"
        android:inputType="textPersonName"
        />
    <EditText 
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/userPass"
        android:id="@+id/pass"
        android:inputType="textPassword"
        android:maxLength="16"/>
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgetPass"
        android:onClick="forgetPass"
        android:clickable="true"
       />
    <Button 
        android:layout_height="wrap_content"
        android:layout_width="200dp"
        android:onClick="login"
        android:text="@string/login"
        android:background="#e0e"/>
</LinearLayout>
    
    <Button 
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:onClick="register"
        android:text="@string/register"
        android:background="#7a0"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        />
</RelativeLayout>
